# gryps

./: .coverage  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
.atl/: .skill-registry.cache.json  skill-registry.md
.engram/: manifest.json
.github/workflows/: ci.yml
docs/: ARQUITECTURA.md  CUADERNO_ESTUDIO.md  DESARROLLO.md  HANDOFF.md  HISTORIAS_USUARIO.md  VISION.md
openspec/: config.yaml
openspec/changes/slice-1.3-plate-detector-ocr/: apply-progress.md  design.md  exploration.md  proposal.md  tasks.md  verify-report.md
src/gryps/: __main__.py
src/gryps/core/: __init__.py  bus.py  exceptions.py  frame_store.py  pipeline_orchestrator.py  registry.py
src/gryps/plugins/detectors/: __init__.py  base.py
src/gryps/plugins/ocr_backends/: __init__.py  base.py  handler.py  paddleocr_backend.py  selector.py
src/gryps/plugins/outputs/: __init__.py  base.py
src/gryps/preprocessors/: __init__.py  base.py
src/gryps/streams/: __init__.py  base.py  file_stream.py
src/gryps/tools/: calibrate.py
src/gryps/tracking/: __init__.py  plate_tracker.py
src/gryps/utils/: roi.py
tests/: test_import.py
tests/unit/: test_bus.py  test_calibrate_tool.py  test_console_output.py  test_detector_base.py  test_frame_logger.py  test_frame_store.py  test_main.py  test_ocr_backends.py  test_pipeline_orchestrator.py  test_plate_detector_handler.py  test_plate_tracker.py  test_registry.py  test_roi_preprocessor.py  test_streams.py  test_ultralytics_adapter.py  test_vehicle_detector_handler.py  test_vehicle_yolo.py
(+21 files in other folders)
